[gd_scene load_steps=9 format=3 uid="uid://bcuh5ccdr1cqc"]

[ext_resource type="Script" uid="uid://bodn4jw8tyemx" path="res://addons/gdvecrig/VecDrawing.gd" id="1_cjag6"]
[ext_resource type="Script" uid="uid://druaxt2ugybtj" path="res://addons/gdvecrig/VecWaypoint.gd" id="2_ukuny"]
[ext_resource type="Script" uid="uid://csgt88iv3c4ke" path="res://addons/gdvecrig/VecStroke.gd" id="3_2kylr"]

[sub_resource type="Animation" id="Animation_2c1uf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VecDrawing/ConstraintExampleSkel/Root:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.615827]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VecDrawing/ConstraintExampleSkel/Root/A:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.410617]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VecDrawing/ConstraintExampleSkel/Root/A/B:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-3.56602]
}

[sub_resource type="Animation" id="Animation_aa01w"]
resource_name = "Test"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VecDrawing/ConstraintExampleSkel/Root:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.615827, -0.363459]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VecDrawing/ConstraintExampleSkel/Root/A:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.410617, -0.321051]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VecDrawing/ConstraintExampleSkel/Root/A/B:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-3.56602, -2.58956]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_weu04"]
_data = {
&"RESET": SubResource("Animation_2c1uf"),
&"Test": SubResource("Animation_aa01w")
}

[sub_resource type="Curve" id="Curve_syim4"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.676218, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_2au82"]
_data = [Vector2(0, 0), 0.0, 3.32834, 0, 0, Vector2(0.530275, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -5.48569, 0.0, 0, 0]
point_count = 3

[node name="Test" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(36, 3)
zoom = Vector2(4.136, 4.136)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_weu04")
}
autoplay = "Test"

[node name="OLD" type="Node2D" parent="."]
visible = false

[node name="Skeleton2D" type="Skeleton2D" parent="OLD"]

[node name="Root" type="Bone2D" parent="OLD/Skeleton2D"]
position = Vector2(84, 5)
rotation = 0.00226352
rest = Transform2D(0.999997, 0.00226352, -0.00226352, 0.999997, 84, 5)

[node name="Face" type="Bone2D" parent="OLD/Skeleton2D/Root"]
position = Vector2(-39.0022, -0.91172)
rest = Transform2D(1, 0, 0, 1, -39.0022, -0.91172)
auto_calculate_length_and_angle = false
length = 39.39
bone_angle = -180.0

[node name="Nose" type="Bone2D" parent="OLD/Skeleton2D/Root/Face"]
position = Vector2(-48, -1)
rest = Transform2D(1, 0, 0, 1, -48, -1)
auto_calculate_length_and_angle = false
length = 39.39
bone_angle = -180.0

[node name="VecDrawing" type="Node2D" parent="OLD"]
script = ExtResource("1_cjag6")
fill = Color(0, 0.207843, 0.00392157, 1)
steps = 32
show_rest = false
skeleton = NodePath("../Skeleton2D")
constraints = [1, 1, 1, 1, 1, 1, 1]

[node name="VecWaypoint" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(111.758, 24.2684)

[node name="VecWaypoint2" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(85.5159, 23.9356)

[node name="VecWaypoint3" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(49.6174, 23.4803)

[node name="VecWaypoint13" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(37.0168, 24.104)

[node name="VecWaypoint14" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(12.6823, 24.2341)

[node name="VecWaypoint15" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(-21.975, 24.4194)

[node name="VecWaypoint4" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(-39.0198, 27.6659)

[node name="VecWaypoint5" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(-37.8377, 7.22061)

[node name="VecWaypoint6" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(-36.5741, -14.6349)

[node name="VecWaypoint7" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(-23.8049, -16.3941)

[node name="VecWaypoint8" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(7.0028, -16.3839)

[node name="VecWaypoint9" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(38.8041, -16.3733)

[node name="VecWaypoint10" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(50.8376, -16.8179)

[node name="VecWaypoint11" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(86.9564, -16.0507)

[node name="VecWaypoint12" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(120.913, -15.3294)

[node name="VecStroke" type="Line2D" parent="OLD/VecDrawing"]
visible = false
points = PackedVector2Array(85.5159, 23.9356, 82.1134, 23.8966, 78.8493, 23.8639, 75.7165, 23.837, 72.7081, 23.8156, 69.8169, 23.7996, 67.0358, 23.7885, 64.3579, 23.7821, 61.7761, 23.78, 59.2833, 23.782, 56.8724, 23.7878, 54.5365, 23.7969, 52.2684, 23.8093, 50.0611, 23.8244, 47.9075, 23.8421, 45.8006, 23.862, 43.7334, 23.8838, 41.6987, 23.9073, 39.6896, 23.932, 37.6989, 23.9578, 35.7196, 23.9842, 33.7446, 24.0111, 31.767, 24.038, 29.7796, 24.0647, 27.7754, 24.0909, 25.7473, 24.1163, 23.6883, 24.1405, 21.5912, 24.1633, 19.4492, 24.1844, 17.2551, 24.2034, 15.0018, 24.2201, 12.6823, 24.2341, 12.6823, 24.2341, 9.38334, 24.2607, 6.1945, 24.301, 3.11586, 24.3497, 0.147563, 24.4013, -2.71028, 24.4504, -5.45753, 24.4918, -8.09408, 24.5199, -10.6198, 24.5294, -13.0346, 24.5149, -15.3383, 24.471, -17.5308, 24.3924, -19.6119, 24.2736, -21.5816, 24.1093, -23.4398, 23.894, -25.1862, 23.6224, -26.8208, 23.2891, -28.3435, 22.8887, -29.7541, 22.4159, -31.0526, 21.8651, -32.2387, 21.2311, -33.3124, 20.5084, -34.2735, 19.6917, -35.1219, 18.7756, -35.8575, 17.7546, -36.4802, 16.6235, -36.9898, 15.3768, -37.3863, 14.009, -37.6694, 12.5149, -37.8391, 10.8891, -37.8953, 9.12613, -37.8377, 7.22061, -37.8377, 7.22061, -37.6793, 5.16768, -37.4478, 3.23653, -37.1417, 1.42347, -36.7599, -0.275192, -36.301, -1.86315, -35.7636, -3.34409, -35.1466, -4.7217, -34.4485, -5.99969, -33.668, -7.18173, -32.8038, -8.27152, -31.8547, -9.27274, -30.8193, -10.1891, -29.6962, -11.0243, -28.4842, -11.782, -27.1819, -12.4659, -25.7881, -13.0797, -24.3013, -13.627, -22.7204, -14.1117, -21.044, -14.5373, -19.2707, -14.9076, -17.3993, -15.2262, -15.4284, -15.4969, -13.3567, -15.7233, -11.1829, -15.9092, -8.90572, -16.0581, -6.5238, -16.1739, -4.03584, -16.2601, -1.44052, -16.3206, 1.26348, -16.3589, 4.07747, -16.3788, 7.00277, -16.3839, 7.00277, -16.3839, 10.0201, -16.3842, 12.9228, -16.3871, 15.7198, -16.3921, 18.4198, -16.399, 21.0318, -16.4073, 23.5644, -16.4168, 26.0267, -16.4272, 28.4274, -16.438, 30.7753, -16.449, 33.0793, -16.4598, 35.3481, -16.4701, 37.5907, -16.4796, 39.8159, -16.4878, 42.0325, -16.4945, 44.2493, -16.4994, 46.4751, -16.5021, 48.7189, -16.5022, 50.9894, -16.4995, 53.2954, -16.4936, 55.6459, -16.4842, 58.0495, -16.4708, 60.5152, -16.4533, 63.0518, -16.4312, 65.6681, -16.4043, 68.373, -16.3721, 71.1753, -16.3344, 74.0837, -16.2907, 77.1072, -16.2409, 80.2546, -16.1845, 83.5347, -16.1212, 86.9564, -16.0507)
width = 2.321
width_curve = SubResource("Curve_syim4")
script = ExtResource("3_2kylr")

[node name="@Node@22520" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(181.029, 28.1224)

[node name="@Node@22521" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(181.029, 28.1224)

[node name="@Node@22522" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(181.029, 28.1224)

[node name="@Node@22523" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(150.541, -2.47034)

[node name="@Node@22524" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(150.541, -2.47034)

[node name="@Node@22525" type="Node" parent="OLD/VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(150.541, -2.47034)

[node name="VecDrawing" type="Node2D" parent="."]
script = ExtResource("1_cjag6")
fill = Color(0.367624, 0.294815, 1, 1)
steps = 20
show_rest = false
skeleton = NodePath("ConstraintExampleSkel")
constraints = [1, 1, 1, 1, 1, 1]

[node name="@Node@21576" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(120.094, -20.6654)

[node name="@Node@21577" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(96.2848, -20.0842)

[node name="@Node@21578" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(72.476, -19.503)

[node name="@Node@21579" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(54.8222, -20.9728)

[node name="@Node@21580" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(33.192, -20.1783)

[node name="@Node@21581" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(14.6314, -19.4966)

[node name="@Node@21582" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(-4.83852, -16.1886)

[node name="@Node@21583" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(-14.0589, -8.75826)

[node name="@Node@21584" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(-23.2793, -1.32791)

[node name="@Node@23946" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(-26.5409, -0.0147052)

[node name="@Node@23947" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(-15.3471, 7.15251)

[node name="@Node@23948" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(-4.15334, 14.3197)

[node name="@Node@23949" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(12.877, 16.0971)

[node name="@Node@23950" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(33.9384, 16.2342)

[node name="@Node@23951" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(54.9998, 16.3713)

[node name="@Node@23952" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(78.8239, 15.0712)

[node name="@Node@23953" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(98.9545, 14.9737)

[node name="@Node@23954" type="Node" parent="VecDrawing"]
script = ExtResource("2_ukuny")
value = Vector2(119.085, 14.8762)

[node name="ConstraintExampleSkel" type="Skeleton2D" parent="VecDrawing"]

[node name="Root" type="Bone2D" parent="VecDrawing/ConstraintExampleSkel"]
position = Vector2(99, -1)
rotation = 0.615827
rest = Transform2D(1, 0, 0, 1, 99, -1)

[node name="A" type="Bone2D" parent="VecDrawing/ConstraintExampleSkel/Root"]
position = Vector2(-58, 0)
rotation = 0.410617
rest = Transform2D(1, 0, 0, 1, -58, 0)

[node name="B" type="Bone2D" parent="VecDrawing/ConstraintExampleSkel/Root/A"]
position = Vector2(-51, -1)
rotation = -3.56602
scale = Vector2(1, 1)
rest = Transform2D(-0.999263, 0.0383877, -0.0383877, -0.999263, -51, -1)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 177.8

[node name="VecStroke" type="Line2D" parent="VecDrawing"]
rotation = -0.000579591
points = PackedVector2Array(107.807, -18.1467, 104.601, -19.6071, 101.502, -20.9906, 98.5096, -22.3161, 95.6218, -23.6026, 92.8375, -24.8691, 90.1556, -26.1345, 87.5746, -27.4177, 85.0935, -28.7379, 82.7107, -30.1138, 80.4252, -31.5645, 78.2355, -33.1089, 76.1405, -34.7661, 74.1389, -36.5548, 72.2293, -38.4942, 70.4105, -40.6032, 68.6812, -42.9007, 67.0402, -45.4057, 65.4861, -48.1371, 64.0177, -51.114, 64.0177, -51.114, 62.1614, -54.9986, 60.2754, -58.6384, 58.3629, -62.0369, 56.4273, -65.1978, 54.4719, -68.1244, 52.5001, -70.8204, 50.5151, -73.2894, 48.5203, -75.5348, 46.5191, -77.5602, 44.5147, -79.3691, 42.5105, -80.9651, 40.5098, -82.3518, 38.5159, -83.5326, 36.5322, -84.5112, 34.5621, -85.291, 32.6087, -85.8756, 30.6755, -86.2685, 28.7658, -86.4734, 26.8828, -86.4936, 26.8828, -86.4936, 25.0886, -86.4333, 23.4415, -86.385, 21.9399, -86.3355, 20.5821, -86.2715, 19.3665, -86.1796, 18.2914, -86.0465, 17.3552, -85.8588, 16.5561, -85.6034, 15.8925, -85.2667, 15.3627, -84.8356, 14.9651, -84.2967, 14.6981, -83.6366, 14.5598, -82.8421, 14.5488, -81.8997, 14.6632, -80.7964, 14.9015, -79.5185, 15.262, -78.053, 15.743, -76.3864, 16.3428, -74.5053, 16.3428, -74.5053, 16.9821, -72.666, 17.6884, -70.7981, 18.4546, -68.8984, 19.2739, -66.9639, 20.1395, -64.9913, 21.0443, -62.9775, 21.9817, -60.9193, 22.9445, -58.8137, 23.9261, -56.6575, 24.9195, -54.4475, 25.9178, -52.1806, 26.9141, -49.8536, 27.9015, -47.4634, 28.8732, -45.0069, 29.8223, -42.4808, 30.7419, -39.8821, 31.625, -37.2076, 32.4649, -34.4542, 33.2547, -31.6187, 33.2547, -31.6187, 34.291, -28.4771, 35.6804, -25.4763, 37.3986, -22.6078, 39.4212, -19.8635, 41.7239, -17.2351, 44.2823, -14.7144, 47.072, -12.293, 50.0689, -9.96286, 53.2484, -7.7156, 56.5862, -5.54299, 60.0581, -3.43678, 63.6396, -1.38871, 67.3065, 0.609471, 71.0343, 2.56601, 74.7988, 4.48917, 78.5755, 6.38719, 82.3401, 8.26833, 86.0684, 10.1408, 89.7359, 12.013)
width_curve = SubResource("Curve_2au82")
default_color = Color(0.728693, 0.000371281, 0.72016, 1)
script = ExtResource("3_2kylr")
metadata/_custom_type_script = "uid://csgt88iv3c4ke"

[node name="VecDrawing2" type="Node2D" parent="."]
script = ExtResource("1_cjag6")
steps = 20
constraints = [1, 1, 1, 1, 1, 1, 1]
metadata/_custom_type_script = "uid://bodn4jw8tyemx"

[node name="@Node@24403" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-64.4941, -36.5843)

[node name="@Node@24404" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-65.8361, -14.7106)

[node name="@Node@24405" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-67.216, 7.77843)

[node name="@Node@23783" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-6.68125, 4.38408)

[node name="@Node@23784" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(2.87501, -4.92351)

[node name="@Node@23785" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(12.4313, -14.2311)

[node name="@Node@23786" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(8.47595, -31.7458)

[node name="@Node@23787" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(2.11316, -47.233)

[node name="@Node@23788" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-4.89917, -64.3013)

[node name="@Node@25003" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-11.4789, -68.1478)

[node name="@Node@25004" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-23.5745, -76.4794)

[node name="@Node@25005" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-34.3451, -83.8983)

[node name="@Node@25006" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-51.4966, -85.5325)

[node name="@Node@25007" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-69.0278, -73.7422)

[node name="@Node@25008" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-86.5591, -61.9518)

[node name="@Node@25009" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-88.4791, -59.1019)

[node name="@Node@25010" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-89.6469, -46.0166)

[node name="@Node@25011" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-90.8417, -32.6284)

[node name="@Node@25012" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-90.9847, -14.5042)

[node name="@Node@25013" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-83.1066, -8.11253)

[node name="@Node@25014" type="Node" parent="VecDrawing2"]
script = ExtResource("2_ukuny")
value = Vector2(-75.2284, -1.72085)

[node name="VecDrawing3" type="Node2D" parent="."]
script = ExtResource("1_cjag6")
cyclic = true
fill = Color(0.442911, 0.442911, 0.442911, 1)
metadata/_custom_type_script = "uid://bodn4jw8tyemx"
